--- a/yatube/templates/users/password_reset_confirm.html
+++ b/yatube/templates/users/password_reset_confirm.html
@@ -16,7 +16,6 @@
               <div class="card-body">
                 <form method="post" action="{% url 'users:password_reset_confirm' %}">
                   {% csrf_token %}
-                  {% comment %} <input type="hidden" name="csrfmiddlewaretoken" value=""> {% endcomment %}
                   <div class="form-group row my-3 p-3">
                     <label for="id_new_password1">
                       Новый пароль        
@@ -40,11 +39,10 @@
                     </button>
                   </div>
                 </form>
-              </div> <!-- card body -->
-            </div> <!-- card -->
-          </div> <!-- col -->
-        </div> <!-- row -->
-        <!-- если использована неправильная ссылка -->
+              </div> 
+            </div> 
+          </div> 
+        </div> 
         <div class="row justify-content-center">
           <div class="col-md-8 p-5">
             <div class="card">
@@ -53,11 +51,10 @@
               </div>
               <div class="card-body">
                 <p>Ссылка сброса пароля содержит ошибку или устарела.</p>
-              </div> <!-- card body -->
-            </div> <!-- card -->
-          </div> <!-- col -->
-        </div> <!-- row -->
-        <!-- конец если использована неправильная ссылка -->
+              </div> 
+            </div>
+          </div> 
+        </div>
       </div>
 
 {% else %}
@@ -67,10 +64,10 @@
       <div class="card-header">Ошибка</div>
       <div class="card-body">
         <p>Ссылка сброса пароля содержит ошибку или устарела.</p>
-      </div> <!-- card body -->
-    </div> <!-- card -->
-  </div> <!-- col -->
-</div> <!-- row -->
+      </div> 
+    </div>
+  </div> 
+</div>
 {% endif %}
 
 {% endblock %} 
